# Spherify

./: .gitignore  Literature and Research.txt  PRIVACY_DATA_HANDLING_POLICY_DRAFT.md  README.md  settings.gradle  spherify-log.txt
app/: build.gradle
app/src/debug/: AndroidManifest.xml
app/src/debug/java/com/spherify/app/: CaptureActivity.java  CaptureDebugCsvWriter.java  CaptureDebugExportActivity.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  spherify_stitcher.cpp
app/src/main/java/com/spherify/app/: CandidateAnalysisResult.java  CandidateQualityReport.java  CandidateQualityScorer.java  CaptureActivity.java  CaptureAnalysisFacts.java  CaptureFrameRecord.java  CaptureFrameRole.java  CaptureGraphEdgeRecord.java  CaptureMode.java  CaptureRawFacts.java  CaptureSessionRecord.java  CaptureTarget.java  CaptureTargetPhase.java  CaptureTargetPlanner.java  DraftFrameRecord.java  FlatImageActivity.java  GLProjectionView.java  LibraryItem.java  MainActivity.java  NativeOpenCvStitcher.java  OpenCvOverlapValidator.java  Phase5Stitcher.java  ProjectionExport.java  SessionStatus.java  SharedCameraCaptureActivity.java  SphereProjectionView.java  SpherifyLibrary.java  StitchMasterResult.java
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
docs/: CAPTURE_STITCHING_DEEP_DIVE.md  VERSION_0_7_4_QA_CHECKLIST.md  native-stitcher.md
scripts/: build-opencv-android.ps1
